--- a/style.css
+++ b/style.css
@@ -10,3 +10,51 @@ body{
     font-size: 70px;
     font-family: sans-serif;
 }
+
+h1{
+    font-family: 'CabinetGrotesk-Thin';
+    padding-top: 10%;
+    font-size: 100px;
+    text-align: center;
+}
+
+a{
+    text-decoration:none;
+    color: rgb(12, 9, 9);
+    font-family: sans-serif; 
+}
+.tab{
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    max-width: 960px;
+    min-width: 720px;
+    width: 100%;
+    margin: 0 auto;
+}
+
+.tab ul{
+    list-style: none;
+    justify-content: center;
+    align-items:center ;
+    display: flex;
+}
+
+.tab ul li{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    text-align: center;
+    padding: 16px 45px;
+    border: 1px ;
+    cursor: pointer;
+}
+
+.tab ul li img{
+    max-height: 80px;
+    margin-left:auto;
+    margin-right: auto;
+    margin-bottom: 16px;
+}
